fix issue of individual cards not getting stretched when sibling is bigger in height

--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ button {
 .header__primary {
 	display: flex;
 	align-items: center;
+	gap: 1rem;
 }
 
 .header__primary--left {
@@ -154,26 +155,26 @@ button {
 }
 
 .header__primary-link--username {
-	font-weight: 600;
 	padding: 0.25rem 0.375rem;
+	font-weight: 600;
 	font-size: 0.875rem;
 }
 
 .header__search {
+	color: var(--color-text-secondary);
 	padding: 0.25rem 0.75rem;
 	border: var(--border-thin) solid var(--color-border);
 	border-radius: var(--border-radius-medium);
-	color: var(--color-text-secondary);
 
 	display: flex;
 	align-items: center;
 	gap: 0.5rem;
 
 	> input {
-		border: none;
-		outline: transparent;
-		background-color: inherit;
 		color: inherit;
+		background-color: inherit;
+		outline: transparent;
+		border: none;
 	}
 }
 
@@ -193,10 +194,11 @@ button {
 
 /* SECONDARY-HEADER */
 .header__secondary {
+	height: 3rem;
 	padding: 0 1rem;
+
 	display: flex;
 	align-items: center;
-	height: 3rem;
 }
 
 .header__secondary-list {
@@ -206,14 +208,16 @@ button {
 }
 
 .header__secondary-link {
-	padding: 0.375rem 0.5rem;
 	position: relative;
+
 	color: var(--color-text-primary);
+	padding: 0.375rem 0.5rem;
+	font-weight: 400;
+	font-size: 0.875rem;
+
 	display: flex;
 	align-items: center;
 	gap: 0.5rem;
-	font-weight: 400;
-	font-size: 0.875rem;
 
 	> svg {
 		color: var(--color-text-secondary);
@@ -222,11 +226,12 @@ button {
 	&::after {
 		content: '';
 		position: absolute;
+		left: 0;
+		bottom: -8px;
+
 		height: 0;
 		width: 100%;
 		background-color: #fd8c73;
-		bottom: -8px;
-		left: 0;
 		transform: translateY(50%);
 	}
 }
@@ -244,6 +249,7 @@ button {
 	max-width: 76rem;
 	margin: 0.5rem auto 0;
 	padding: 2rem;
+
 	display: grid;
 	grid-template-columns: 1fr 3fr;
 	gap: 1.5rem;
@@ -259,39 +265,40 @@ button {
 }
 
 .sidebar__profile-name {
+	color: var(--color-text-primary);
 	font-weight: 600;
 	font-size: 1.5rem;
-	color: var(--color-text-primary);
 }
 
 .sidebar__profile-username {
+	color: var(--color-text-secondary);
 	font-weight: 300;
 	font-size: 1.25rem;
-	color: var(--color-text-secondary);
 }
 
 .sidebar__profile-edit {
 	width: 100%;
-	background-color: var(--color-accent);
 	padding: 0.375rem 1rem;
+	margin: 0 0 1rem;
+	background-color: var(--color-accent);
+	font-size: 0.875rem;
 	border: var(--border-thin) solid var(--color-border);
 	border-radius: var(--border-radius-medium);
-	font-size: 0.875rem;
-	margin: 0 0 1rem;
 }
 
 .sidebar__achievements {
 	margin: 1rem 0 0;
-	border-top: var(--border-thin) solid var(--color-border);
 	padding: 1rem 0 0;
+	border-top: var(--border-thin) solid var(--color-border);
+
 	display: flex;
 	flex-direction: column;
 	gap: 0.5rem;
 }
 
 .sidebar__achievements-heading {
-	font-weight: 600;
 	color: var(--color-text-primary);
+	font-weight: 600;
 }
 
 .sidebar__achievements-list {
@@ -344,13 +351,14 @@ button {
 }
 
 .repositories-grid__item {
+	height: 100%;
 	padding: 1rem;
 	border: var(--border-thin) solid var(--color-border);
 	border-radius: var(--border-radius-medium);
+
 	display: flex;
 	flex-direction: column;
 	gap: 0.5rem;
-
 }
 
 .repository--header {
@@ -367,44 +375,51 @@ button {
 }
 
 .repository--type {
+	color: var(--color-text-secondary);
+	padding: 0.125rem 0.25rem;
+	margin-right: auto;
+	font-size: 0.75rem;
 	border: var(--border-thin) solid var(--color-border);
 	border-radius: var(--border-radius-full);
-	color: var(--color-text-secondary);
-	font-size: 0.75rem;
-	padding: 0.125rem 0.25rem;
 }
 
 .repository--description {
-	font-size: 0.75rem;
 	color: var(--color-text-secondary);
+	font-size: 0.75rem;
+	font-weight: 300;
+	line-height: 1.5;
 }
 
 .repository--stats {
+	margin-top: auto;
+	font-size: 0.875rem;
+
 	display: flex;
 	align-items: center;
 	gap: 1rem;
 	flex-wrap: wrap;
-	font-size: 0.875rem;
 }
 
 .repository--stars {
+	color: var(--color-text-secondary);
+
 	display: flex;
 	align-items: center;
 	gap: 0.125rem;
-
-	color: var(--color-text-secondary);
 }
 
 .repository--languages {
+	color: var(--color-text-secondary);
+
 	display: flex;
 	align-items: center;
 	gap: 0.825rem;
-	color: var(--color-text-secondary);
 }
 
 .repository--language {
+	color: var(--color-text-secondary);
+
 	display: flex;
 	align-items: center;
 	gap: 0.25rem;
-	color: var(--color-text-secondary);
 }
